fixed navbar hover not working on mobile, contacts button mobile layout and navbar overlapping content when clicked

--- a/src/components/Elements/ContactSection/contactMe.module.css
+++ b/src/components/Elements/ContactSection/contactMe.module.css
@@ -80,6 +80,8 @@
 }
 .btns {
 	padding-top: 1em;
+	display: flex;
+	gap: 1em;
 }
 
 .btns a {
@@ -90,11 +92,17 @@
 	letter-spacing: 1px;
 	border: 0;
 	border-radius: 2.125em;
-	margin-right: 1em;
 	padding: 1.4em 2.5em;
 	transition: all 250ms ease-out;
 }
 .btns a:hover {
 	color: var(--clr-bg);
 	background-color: var(--clr-green);
+}
+@media (max-width: 550px) {
+	.btns {
+		flex-direction: column;
+		justify-content: center;
+		text-align: center;
+	}
 }
