--- a/src/pages/about/about.module.css
+++ b/src/pages/about/about.module.css
@@ -120,7 +120,7 @@
 }
 .skillsSet {
 	width: 100%;
-	padding-inline: 2rem;
+	/* padding-inline: 2rem; */
 	min-width: 270px;
 	margin: 0.5em;
 }
@@ -142,7 +142,7 @@
 @media (min-width: 750px) {
 	.skillsSet {
 		width: 45%;
-		padding-inline: 0;
+		/* padding-inline: 0; */
 	}
 	.skillsContainer article:nth-last-child(-n + 2) {
 		padding-bottom: 0;
