--- a/src/pages/projects/projects.module.css
+++ b/src/pages/projects/projects.module.css
@@ -7,7 +7,8 @@
 
 .projects {
 	padding: 0 var(--body-spacing);
-	height: 100vh;
+	padding-top: 10em;
+	min-height: 100vh;
 	display: flex;
 	align-items: center;
 	flex-direction: column;
